SID-3/4/20: complex modes

--- a/JUICE-CDF-HF-SID20_sample.ipynb
+++ b/JUICE-CDF-HF-SID20_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID20 (Burst rich): L1a QL -- 2024/7/21"
+    "# JUICE RPWI HF SID20 (Burst rich): L1a QL -- 2024/7/22"
    ]
   },
   {
@@ -80,6 +80,8 @@
    "source": [
     "# *** Plot dump ***\n",
     "dump_mode = 0                           # 0: no-dump  1:plot dump\n",
+    "comp_mode = 1                           # [Complex]   0: Poweer  1: Matrix   3: Matrix-2D\n",
+    "N_ch0     = 3                           # [channel]   2: 2-ch    3: 3-ch\n",
     "\n",
     "# *** CAL set ***\n",
     "band_mode = 0                           # [Power]     0: sum     1: /Hz\n",
@@ -232,6 +234,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "data = juice_sid20.hf_sid20_shaping(data)\n",
+    "\n",
     "date1 = data.epoch[0];  date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
     "date2 = data.epoch[-1]; date2 = date2.strftime('%Y/%m/%d %R:%S')\n",
     "str_date = date1 + \"  -  \" + date2;  print(str_date)\n",
@@ -248,20 +252,22 @@
    "outputs": [],
    "source": [
     "# Mode \n",
-    "N_ch0 = data.U_selected[0] + data.V_selected[0] + data.W_selected[0]\n",
-    "if (data.complex[0] == 0):\n",
-    "    print(\"complex:\", data.complex[0], \" (power 3-ch) <Table 6.3.2>\")\n",
+    "# comp_mode = data.complex[0]\n",
+    "# N_ch0 = data.U_selected[0] + data.V_selected[0] + data.W_selected[0]\n",
+    "N_frequency = data.B0_step[0] * data.B0_subdiv[0]\n",
+    "\n",
+    "if (comp_mode == 0):\n",
+    "    print(\"complex:\", comp_mode, \" (power 3-ch) <Table 6.3.2>\")\n",
     "    N_component = 3\n",
-    "elif (data.complex[0] == 1):\n",
-    "    print(\"complex:\", data.complex[0], \" (spectral matrix 3-ch) <Table 6.3.3>\")\n",
+    "elif (comp_mode == 1):\n",
+    "    print(\"complex:\", comp_mode, \" (spectral matrix 3-ch) <Table 6.3.3>\")\n",
     "    N_component = 9\n",
     "else:\n",
-    "    print(\"complex:\", data.complex[0], \" (3D spectral matrix 3-ch) <Table 6.3.4>\")\n",
+    "    print(\"complex:\", comp_mode, \" (3D spectral matrix 3-ch) <Table 6.3.4>\")\n",
     "    N_component = 21\n",
     "\n",
     "print(\"Ch:\", N_ch0, \"  (U:\", data.U_selected[0], \"  V:\", data.V_selected[0], \"  W:\", data.W_selected[0], \")\")\n",
     "print(\"data size:\", data.EuEu.shape, n_time0, n_freq0)\n",
-    "N_frequency = data.B0_step[0] * data.B0_subdiv[0]\n",
     "print(\"==> Component\", N_component, \"   Num-frequency\", N_frequency, \"  Num-sweep:\", n_time0)"
    ]
   },
@@ -299,6 +305,7 @@
     "freq_width1   = freq_width_1d[0:N_frequency]\n",
     "\n",
     "# Data\n",
+    "print(data.EuEu.shape, n_time0, data.N_block[0], N_frequency)\n",
     "EuEu_2d    = data.EuEu.reshape(n_time0 * data.N_block[0], N_frequency);     EuEu_2d    = EuEu_2d.transpose()\n",
     "EvEv_2d    = data.EvEv.reshape(n_time0 * data.N_block[0], N_frequency);     EvEv_2d    = EvEv_2d.transpose()\n",
     "EwEw_2d    = data.EwEw.reshape(n_time0 * data.N_block[0], N_frequency);     EwEw_2d    = EwEw_2d.transpose()\n",
@@ -360,6 +367,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "af07223c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p_max = np.ceil(np.log10( np.amax( [np.amax(data.EuEv_re), np.amax(data.EvEw_re), np.amax(data.EwEu_re), np.amax(data.EuEv_im), np.amax(data.EvEw_im), np.amax(data.EwEu_im)] ) )*5)/5\n",
+    "print(\"  p_max:\", p_max)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "3c061a3c",
    "metadata": {},
    "outputs": [],
@@ -380,7 +398,7 @@
     "ax1.plot(np.ravel(data.EwEw), '-b', linewidth=0.5, label='ww')\n",
     "ax1.set_yscale('log')\n",
     "#\n",
-    "if data.complex[0] > 0:    # Matrix\n",
+    "if comp_mode > 0:    # Matrix\n",
     "    ax2.plot(np.ravel(data.EuEv_re), '-r', linewidth=1.0, label='uv_re')\n",
     "    ax2.plot(np.ravel(data.EvEw_re), '-g', linewidth=0.8, label='vw_re')\n",
     "    ax2.plot(np.ravel(data.EwEu_re), '-b', linewidth=0.6, label='wu_re')\n",
@@ -414,7 +432,7 @@
     "ax9.plot(np.ravel(data.epoch), '.')\n",
     "\n",
     "ax1.set_ylabel(power_str)\n",
-    "if data.complex[0] > 0:    # Matrix\n",
+    "if comp_mode > 0:    # Matrix\n",
     "    ax2.set_ylabel('Real & Img');          ax3.set_ylabel('Deg. Pol.');    ax4.set_ylabel('Deg. Linear Pol.')\n",
     "    ax5.set_ylabel('Deg. Circular Pol.');  ax6.set_ylabel('Linear Deg.'); \n",
     "ax7.set_ylabel('frequency [kHz]');         ax8.set_ylabel('T [degC]');     ax9.set_ylabel('Date-Time')\n",
@@ -423,7 +441,7 @@
     "title_label = '[JUICE/RPWI HF Burst-Rich (SID-20)]  ' + data_name\n",
     "ax1.set_title(title_label)\n",
     "ax1.legend(loc='upper right', fontsize=8); ax7.legend(loc='upper right', fontsize=8);  ax8.legend(loc='upper right', fontsize=8)\n",
-    "if data.complex[0] > 0:    # Matrix\n",
+    "if comp_mode > 0:    # Matrix\n",
     "    ax2.legend(loc='upper right', fontsize=8); ax3.legend(loc='upper right', fontsize=8); \n",
     "    ax4.legend(loc='upper right', fontsize=8); ax5.legend(loc='upper right', fontsize=8); ax6.legend(loc='upper right', fontsize=8); \n",
     "\n",
@@ -436,8 +454,8 @@
     "ylim=[10**p_raw_min, 10**p_raw_max]\n",
     "ax1.set_ylim(ylim)\n",
     "\"\"\"\n",
-    "if data.complex[0] > 0:    # Matrix\n",
-    "    # ylim=[-10**p_raw_max, 10**p_raw_max]; ax2.set_ylim(ylim)\n",
+    "if comp_mode > 0:    # Matrix\n",
+    "    ylim=[-10**p_max, 10**p_max];  ax2.set_ylim(ylim)\n",
     "    ylim=[-0.05, 1.05]; ax3.set_ylim(ylim); ax4.set_ylim(ylim)\n",
     "    ylim=[-1.05, 1.05]; ax5.set_ylim(ylim)\n",
     "    ylim=[-0.05, 185.]; ax6.set_ylim(ylim)\n",
@@ -511,7 +529,7 @@
     "if f_mode == 1:\n",
     "    ax1.set_xscale('log')\n",
     "#\n",
-    "if data.complex[0] > 0:    # Matrix\n",
+    "if comp_mode > 0:    # Matrix\n",
     "    \"\"\"\n",
     "    ax3.plot(freq1, data.EuEv_re[n1][0:N_frequency], '-r', linewidth=1.0, label='uv_re half')\n",
     "    ax3.plot(freq1, data.EvEw_re[n1][0:N_frequency], '-g', linewidth=0.8, label='vw_re half')\n",
@@ -566,7 +584,7 @@
     "\n",
     "# Label\n",
     "ax1.set_ylabel(power_str)\n",
-    "if data.complex[0] > 0:    # Matrix\n",
+    "if comp_mode > 0:    # Matrix\n",
     "    ax5.set_ylabel('Deg. Linear Pol.')\n",
     "    ax6.set_ylabel('Deg. Circular Pol.')\n",
     "    ax7.set_ylabel('Linear Deg.')\n",
@@ -588,7 +606,7 @@
     "ax1.set_xlim(xlim); ax5.set_xlim(xlim); ax6.set_xlim(xlim); ax7.set_xlim(xlim); # ax3.set_xlim(xlim); ax4.set_xlim(xlim); \n",
     "# range: Y-axis\n",
     "ylim=[10**p_min, 10**p_max]; ax1.set_ylim(ylim)\n",
-    "if data.complex[0] > 0:    # Matrix\n",
+    "if comp_mode > 0:    # Matrix\n",
     "    ylim=[-0.05, 1.05]; ax5.set_ylim(ylim);  # ax4.set_ylim(ylim); \n",
     "    ylim=[-1.05, 1.05]; ax6.set_ylim(ylim)\n",
     "    ylim=[-0.05, 185.]; ax7.set_ylim(ylim)\n",
