--- a/JUICE-CDF-HF-SID3_sample.ipynb
+++ b/JUICE-CDF-HF-SID3_sample.ipynb
@@ -6,7 +6,7 @@
    "id": "a116756d",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID3 (Full): L1a QL -- 2024/7/21"
+    "# JUICE RPWI HF SID3 (Full): L1a QL -- 2024/7/22"
    ]
   },
   {
@@ -75,6 +75,8 @@
    "source": [
     "# *** Plot dump ***\n",
     "dump_mode = 0                           # 0: no-dump  1:plot dump\n",
+    "comp_mode = 1                           # [Complex]   0: Poweer  1: Matrix   2: Matrix-PolSep   3: Matrix-2D\n",
+    "N_ch0     = 3                           # [channel]   2: 2-ch    3: 3-ch\n",
     "\n",
     "# *** CAL set ***\n",
     "band_mode = 0                           # [Power]     0: sum     1: /Hz\n",
@@ -83,7 +85,7 @@
     "\n",
     "# *** Unit set ***\n",
     "f_mode    = 1                           # [Frequency] 0: linear  1: log\n",
-    "time_mode = 0                           # [Time]      0: Epoch   1: data number\n",
+    "time_mode = 1                           # [Time]      0: Epoch   1: data number\n",
     "\n",
     "# *** Frenquency range in Linear ***\n",
     "f_mode_min = 80;  f_mode_max = 2068     # 80 - 2068 : as same as SID-4/20\n",
@@ -114,12 +116,16 @@
     "data_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/2024/07/01/'        # CDF data folder\n",
     "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_20240701T011127_V01.cdf',\n",
     "                 ]\n",
+    "\"\"\"\n",
     "# 20240706\n",
-    "data_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/2024/07/06/'        # CDF data folder\n",
-    "data_name_list = [# 'JUICE_L1a_RPWI-HF-SID3_20240706T121009_V01.cdf',\n",
+    "data_dir = '/Users/user/Dropbox-Univ/data/data-JUICE/datasets/2024/07/06/'\n",
+    "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_20240706T121009_V01.cdf',\n",
     "                  'JUICE_L1a_RPWI-HF-SID3_20240706T175202_V01.cdf',\n",
     "                 ]\n",
-    "\"\"\""
+    "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2024/07/06/'\n",
+    "data_name_list = ['JUICE_L1a_RPWI-HF-SID03_20240706T121009-20240706T131448_V01.cdf',\n",
+    "                  'JUICE_L1a_RPWI-HF-SID03_20240706T175202-20240706T183012_V01.cdf',\n",
+    "                 ]"
    ]
   },
   {
@@ -132,16 +138,15 @@
     "# *** Ground Test - Ver.2 ***\n",
     "# 202310 -- SAMPLE\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample/cdf/'        # CDF data folder\n",
-    "data_name_list = ['SID03_20231024-0036.cdf']\n",
-    "data_name_list = ['SID03-2ch-comp0-20231117-1438.cdf']\n",
-    "data_name_list = ['SID03-2ch-comp1-20231117-1448.cdf']\n",
-    "data_name_list = ['SID03-2ch-comp2-20231117-1500.cdf']\n",
-    "data_name_list = ['SID03-3ch-comp0-20231117-1424.cdf']\n",
-    "data_name_list = ['SID03-3ch-comp1-20231117-1418.cdf']                      # \n",
-    "\"\"\"\n",
-    "data_name_list = ['SID03-3ch-comp2-20231117-1429.cdf']\n",
-    "data_name_list = ['SID03-3ch-comp3-20231117-1432.cdf']\n",
-    "\"\"\"\n",
+    "data_name_list = [# 'SID03_20231024-0036.cdf',\n",
+    "                  'SID03-2ch-comp0-20231117-1438.cdf',\n",
+    "                  'SID03-2ch-comp1-20231117-1448.cdf',\n",
+    "                  'SID03-2ch-comp2-20231117-1500.cdf',\n",
+    "                  'SID03-3ch-comp0-20231117-1424.cdf',\n",
+    "                  'SID03-3ch-comp1-20231117-1418.cdf',\n",
+    "                  'SID03-3ch-comp2-20231117-1429.cdf',\n",
+    "                  'SID03-3ch-comp3-20231117-1432.cdf',\n",
+    "                 ]\n",
     "\n",
     "\"\"\"\n",
     "# 202310 -- FS\n",
@@ -228,14 +233,16 @@
     "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_20240614T161148-20240614T162539_V01___TMIDX_00000.bin.cdf',  \n",
     "                 ]\n",
     "\n",
+    "\"\"\"\n",
+    "\"\"\"\n",
     "# 202407 -- LEGA check\n",
-    "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202407_FS/cdf_20240715/'\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202407_FS/cdf_20240716/'\n",
     "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_20240716T152808-20240716T153933_V01.cdf',\n",
     "                 ]\n",
-    "\"\"\"\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202407_FS/cdf_20240718/'\n",
     "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_20000101T011258-20000101T013701_V01___TMIDX_00000.bin.cdf',\n",
-    "                 ]\n"
+    "                 ]\n",
+    "\"\"\"\n"
    ]
   },
   {
@@ -434,6 +441,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "data = juice_sid3.hf_sid3_shaping(data)\n",
+    "\n",
     "date1 = data.epoch[0];  date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
     "date2 = data.epoch[-1]; date2 = date2.strftime('%Y/%m/%d %R:%S')\n",
     "str_date = date1 + \"  -  \" + date2;  print(str_date)\n",
@@ -445,40 +454,61 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8ac3fbef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "i = n_time0-1\n",
+    "print(data.frequency[0][60:80])\n",
+    "print(data.num_NC[i][60:80]+data.num_RC[i][60:80]+data.num_LC[i][60:80])\n",
+    "print(data.num_NC[i]+data.num_RC[i]+data.num_LC[i])\n",
+    "# for j in range(n_freq0):\n",
+    "#    print(j, data.frequency[i][j], data.num_NC[i][j]+data.num_RC[i][j]+data.num_LC[i][j])\n",
+    "#    # print(i, j, data.frequency[i][j], data.num_NC[i][j]+data.num_RC[i][j]+data.num_LC[i][j], data.num_NC[i][j], data.num_RC[i][j], data.num_LC[i][j], data.BG_Eu[i][j], data.BG_Ev[i][j], data.BG_Ew[i][j])\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "abb78ac3",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Mode \n",
-    "N_ch0 = data.U_selected[0] + data.V_selected[0] + data.W_selected[0]\n",
-    "if (data.complex[0] == 0):\n",
+    "# comp_mode = data.complex[0]\n",
+    "# N_ch0 = data.U_selected[0] + data.V_selected[0] + data.W_selected[0]\n",
+    "N_frequency = data.frequency.shape[1]\n",
+    "\n",
+    "# Mode \n",
+    "if (comp_mode == 0):\n",
     "    if N_ch0 == 3:\n",
-    "        print(\"complex:\", data.complex[0], \" (power 3-ch) <Table 6.2.2>\")\n",
+    "        print(\"complex:\", comp_mode, \" (power 3-ch) <Table 6.2.2>\")\n",
     "    else:\n",
-    "        print(\"complex:\", data.complex[0], \" (power 2-ch) <Table 6.2.3>\")\n",
+    "        print(\"complex:\", comp_mode, \" (power 2-ch) <Table 6.2.3>\")\n",
     "    N_component = N_ch0\n",
-    "elif (data.complex[0] == 1):\n",
+    "elif (comp_mode == 1):\n",
     "    if N_ch0 == 3:\n",
-    "        print(\"complex:\", data.complex[0], \" (nominal spectral matrix 3-ch) <Table 6.2.4>\")\n",
+    "        print(\"complex:\", comp_mode, \" (nominal spectral matrix 3-ch) <Table 6.2.4>\")\n",
     "    else:\n",
-    "        print(\"complex:\", data.complex[0], \" (nominal spectral matrix 2-ch) <Table 6.2.5>\")\n",
+    "        print(\"complex:\", comp_mode, \" (nominal spectral matrix 2-ch) <Table 6.2.5>\")\n",
     "    N_component = N_ch0 * N_ch0\n",
-    "elif (data.complex[0] == 2):\n",
+    "elif (comp_mode == 2):\n",
     "    if N_ch0 == 3:\n",
     "        N_component = 27 + 3\n",
-    "        print(\"complex:\", data.complex[0], \" (Polarization separation 3-ch) <Table 6.2.6>\")\n",
+    "        print(\"complex:\", comp_mode, \" (Polarization separation 3-ch) <Table 6.2.6>\")\n",
     "    else:\n",
     "        N_component = 12 + 3\n",
-    "        print(\"complex:\", data.complex[0], \" (Polarization separation 2-ch) <Table 6.2.7>\")\n",
+    "        print(\"complex:\", comp_mode, \" (Polarization separation 2-ch) <Table 6.2.7>\")\n",
     "else:\n",
-    "    print(\"complex:\", data.complex[0], \" (3D spectral matrix 3-ch) <Table 6.2.8>\")\n",
+    "    print(\"complex:\", comp_mode, \" (3D spectral matrix 3-ch) <Table 6.2.8>\")\n",
     "    N_component = 21\n",
     "\n",
     "print(\"Ch:\", N_ch0, \"  (U:\", data.U_selected[0], \"  V:\", data.V_selected[0], \"  W:\", data.W_selected[0], \")\")\n",
     "print(\"data size:\", data.EuEu.shape, n_time0, n_freq0)\n",
     "print(\"BG_downlink:\", data.BG_downlink[0])\n",
     "print(\"RFI_rejection:\", data.RFI_rejection[0])\n",
-    "N_frequency = data.frequency.shape[1]\n",
     "print(\"==> Component\", N_component, \"   Num-frequency\", N_frequency, \"  Num-sweep:\", n_time0)"
    ]
   },
@@ -504,7 +534,7 @@
     "EuEu_2d = data.EuEu.transpose()\n",
     "EvEv_2d = data.EvEv.transpose()\n",
     "EwEw_2d = data.EwEw.transpose()\n",
-    "if data.complex[0] > 0:    # Matrix\n",
+    "if comp_mode > 0:    # Matrix\n",
     "    E_DoLuv_2d = data.E_DoLuv.transpose()\n",
     "    E_DoLvw_2d = data.E_DoLvw.transpose()\n",
     "    E_DoLwu_2d = data.E_DoLwu.transpose()\n",
@@ -563,11 +593,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2d8c6854",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p_max = np.ceil(np.log10( np.amax( [np.amax(data.EuEv_re), np.amax(data.EvEw_re), np.amax(data.EwEu_re), np.amax(data.EuEv_im), np.amax(data.EvEw_im), np.amax(data.EwEu_im)] ) )*5)/5\n",
+    "print(\"  p_max:\", p_max)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "2ef60e31",
    "metadata": {},
    "outputs": [],
    "source": [
-    "if data.complex[0] == 0:    # power\n",
+    "if comp_mode == 0:    # power\n",
     "    fig = plt.figure(figsize=(12, 8))\n",
     "    ax1 = fig.add_subplot(4, 1, 1);  ax7 = fig.add_subplot(4, 1, 2); ax8 = fig.add_subplot(4, 1, 3);  ax9 = fig.add_subplot(4, 1, 4)\n",
     "else:                       # matrix\n",
@@ -587,15 +628,16 @@
     "ax7.plot(np.ravel(data.freq_step*100),  '-g', linewidth=0.8, label='step*100')\n",
     "ax7.plot(np.ravel(data.freq_width*100), '-b', linewidth=1.0, label='width*100')\n",
     "ax8.plot(np.ravel(data.T_HF_FPGA),  ':r', label='T (HK-FPGA)')\n",
-    "ax8.plot(np.ravel(data.T_RWI_CH1),  ':b', label='T (RWI1)')\n",
-    "ax8.plot(np.ravel(data.T_RWI_CH2),  ':g', label='T (RWI2)')\n",
+    "if data.T_RWI_CH1[0] < 250 and data.T_RWI_CH2[0] < 250:\n",
+    "    ax8.plot(np.ravel(data.T_RWI_CH1),  ':b', label='T (RWI1)')\n",
+    "    ax8.plot(np.ravel(data.T_RWI_CH2),  ':g', label='T (RWI2)')\n",
     "ax8.plot(np.ravel(data.cal_signal*10), '-k', label='CAL')\n",
     "ax8.plot(np.ravel(data.onboard_cal*15), '-r', label='Onboard-CAL')\n",
     "ax8.plot(np.ravel(data.RFI_rejection*10+2), '_b', label='RFI')\n",
     "ax8.plot(np.ravel(data.complex*10+4), '_r', label='comp')\n",
     "ax9.plot(np.ravel(data.epoch), '.')\n",
     "#\n",
-    "if data.complex[0] > 0:    # Matrix\n",
+    "if comp_mode > 0:    # Matrix\n",
     "    ax2.plot(np.ravel(data.EuEv_re), '-r', linewidth=1.0, label='uv_re')\n",
     "    ax2.plot(np.ravel(data.EvEw_re), '-g', linewidth=0.8, label='vw_re')\n",
     "    ax2.plot(np.ravel(data.EwEu_re), '-b', linewidth=0.6, label='wu_re')\n",
@@ -619,7 +661,7 @@
     "    ax6.plot(np.ravel(data.E_ANGvw), '-g', linewidth=0.8, label='vw')\n",
     "    ax6.plot(np.ravel(data.E_ANGwu), '-b', linewidth=0.6, label='wu')\n",
     "\n",
-    "if data.complex[0] == 2:    # Matrix\n",
+    "if comp_mode == 2:    # Matrix\n",
     "    ax1.plot(np.ravel(data.EuEu_NC), '-r', linewidth=1.2, label='uu')\n",
     "    ax1.plot(np.ravel(data.EvEv_NC), '-g', linewidth=0.8, label='vv')\n",
     "    ax1.plot(np.ravel(data.EwEw_NC), '-b', linewidth=0.5, label='ww')\n",
@@ -655,14 +697,14 @@
     "\n",
     "ax1.set_ylabel(power_str);  ax8.set_ylabel('T [degC]');   ax9.set_ylabel('Date-Time')\n",
     "ax8.set_xlabel(str_date)\n",
-    "if data.complex[0] > 0:    # Matrix\n",
+    "if comp_mode > 0:    # Matrix\n",
     "    ax2.set_ylabel('Real & Img');          ax3.set_ylabel('Deg. Pol.');    ax4.set_ylabel('Deg. Linear Pol.')\n",
     "    ax5.set_ylabel('Deg. Circular Pol.');  ax6.set_ylabel('Linear Deg.');  ax7.set_ylabel('frequency [kHz]')\n",
     "#\n",
     "title_label = '[JUICE/RPWI HF Full (SID-3)]  ' + data_name\n",
     "ax1.set_title(title_label)\n",
     "ax1.legend(loc='upper right', fontsize=8);  ax7.legend(loc='upper right', fontsize=8); ax8.legend(loc='upper right', fontsize=8)\n",
-    "if data.complex[0] > 0:    # Matrix\n",
+    "if comp_mode > 0:    # Matrix\n",
     "    ax2.legend(loc='upper right', fontsize=8); ax3.legend(loc='upper right', fontsize=8); \n",
     "    ax4.legend(loc='upper right', fontsize=8); ax5.legend(loc='upper right', fontsize=8); ax6.legend(loc='upper right', fontsize=8); \n",
     "\n",
@@ -674,14 +716,12 @@
     "xlim=[0, num_x-1]; ax8.set_xlim(xlim)\n",
     "\"\"\"\n",
     "# range: Y-axis\n",
-    "if data.complex[0] > 0:    # Matrix\n",
-    "    if N_ch0 < 3:\n",
-    "        ylim=[-10**(p_raw_max-3), 10**(p_raw_max-3)];  ax2.set_ylim(ylim)\n",
+    "if comp_mode > 0:    # Matrix\n",
+    "    ylim=[-10**p_max, 10**p_max];  ax2.set_ylim(ylim)\n",
     "    ylim=[-0.05, 1.05]; ax3.set_ylim(ylim); ax4.set_ylim(ylim)\n",
     "    ylim=[-1.05, 1.05]; ax5.set_ylim(ylim)\n",
     "    ylim=[-0.05, 185.]; ax6.set_ylim(ylim)\n",
-    "ylim=[f_min0, f_max0]\n",
-    "ax7.set_ylim(ylim)\n",
+    "ylim=[f_min0, f_max0]; ax7.set_ylim(ylim)\n",
     "\n",
     "# Plot\n",
     "fig.show\n",
@@ -704,7 +744,8 @@
     "print(data.cal_signal)\n",
     "print(data.onboard_cal)\n",
     "print(data.RFI_rejection)\n",
-    "print(data.Pol_sep_SW)"
+    "print(data.Pol_sep_SW)\n",
+    "print(data.T_RWI_CH2)"
    ]
   },
   {
@@ -739,6 +780,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# [DEBUG] Line peak intensity & Stokes parameters\n",
     "n1 = n_time0-1;  \n",
     "print(f\"[SWEEP - {n1}]\")\n",
     "\n",
@@ -757,6 +799,20 @@
     "print('Stockes-UV: {:+.2e}'.format(np.ravel(data.E_Iuv[n1])[peak_f]),   '{:+.2e}'.format(np.ravel(data.E_Quv[n1])[peak_f]),   '{:+.2e}'.format(np.ravel(data.E_Uuv[n1])[peak_f]),   '{:+.2e}'.format(np.ravel(data.E_Vuv[n1])[peak_f]))\n",
     "print('Stockes-VW: {:+.2e}'.format(np.ravel(data.E_Ivw[n1])[peak_f]),   '{:+.2e}'.format(np.ravel(data.E_Qvw[n1])[peak_f]),   '{:+.2e}'.format(np.ravel(data.E_Uvw[n1])[peak_f]),   '{:+.2e}'.format(np.ravel(data.E_Vvw[n1])[peak_f]))\n",
     "print('Stockes-WU: {:+.2e}'.format(np.ravel(data.E_Iwu[n1])[peak_f]),   '{:+.2e}'.format(np.ravel(data.E_Qwu[n1])[peak_f]),   '{:+.2e}'.format(np.ravel(data.E_Uwu[n1])[peak_f]),   '{:+.2e}'.format(np.ravel(data.E_Vwu[n1])[peak_f]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13437248",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# [DEBUG] Complex-2 & -3: line & background intensity checks\n",
+    "# peak_f = 55\n",
+    "# print (peak_f)  #55\n",
+    "for i in range(n_time0):\n",
+    "    print(i, data.complex[i], data.EuEu[i][peak_f], data.EuEu_NC[i][peak_f], data.num_NC[i][peak_f], data.EuEu_RC[i][peak_f], data.num_RC[i][peak_f], data.EuEu_LC[i][peak_f], data.num_LC[i][peak_f], data.EuiEui[i][peak_f], data.EuqEuq[i][peak_f], data.E_DoPuv[i][peak_f], data.E_DoLuv[i][peak_f], data.E_DoCuv[i][peak_f], data.E_ANGuv[i][peak_f])"
    ]
   },
   {
@@ -783,7 +839,7 @@
     "if f_mode == 0:\n",
     "    f_min = f_mode_min;  f_max = f_mode_max\n",
     "\n",
-    "if data.complex[0] == 0:    # power\n",
+    "if comp_mode == 0:    # power\n",
     "    fig = plt.figure(figsize=(12, 4))\n",
     "    ax1 = fig.add_subplot(1, 1, 1)\n",
     "else:                      # matrix\n",
@@ -804,7 +860,7 @@
     "if f_mode == 1:\n",
     "    ax1.set_xscale('log')\n",
     "#\n",
-    "if data.complex[0] > 0:    # Matrix\n",
+    "if comp_mode > 0:    # Matrix\n",
     "    \"\"\"\n",
     "    ax3.plot(freq1, data.EuEv_re[n0], ':r', linewidth=1.0, label='uv_re half')\n",
     "    ax3.plot(freq1, data.EvEw_re[n0], ':g', linewidth=0.8, label='vw_re half')\n",
@@ -862,7 +918,7 @@
     "\n",
     "# Label\n",
     "ax1.set_ylabel(power_str);  ax7.set_xlabel('frequency [Hz]')\n",
-    "if data.complex[0] > 0:    # Matrix\n",
+    "if comp_mode > 0:    # Matrix\n",
     "    ax5.set_ylabel('Deg. Linear Pol.');  ax6.set_ylabel('Deg. Circular Pol.');  ax7.set_ylabel('Linear Deg.')\n",
     "    ax4.set_ylabel('Deg. Pol.');         ax3.set_ylabel('Real & Img')\n",
     "#\n",
@@ -872,18 +928,18 @@
     "title_date = \"[\" + data_name + \"]  \" + date1 + \"  -  \" + date2 + \"  -  \" + date3\n",
     "ax1.set_title(title_date)\n",
     "ax1.legend(loc='upper right', fontsize=8)\n",
-    "if data.complex[0] > 0:    # Matrix\n",
+    "if comp_mode > 0:    # Matrix\n",
     "    ax3.legend(loc='upper right', fontsize=8); ax4.legend(loc='upper right', fontsize=8); \n",
     "    ax5.legend(loc='upper right', fontsize=8); ax6.legend(loc='upper right', fontsize=8);  ax7.legend(loc='upper right', fontsize=8)\n",
     "\n",
     "# range: X-axis\n",
     "xlim=[f_min, f_max]\n",
     "ax1.set_xlim(xlim); \n",
-    "if data.complex[0] > 0:    # Matrix\n",
+    "if comp_mode > 0:    # Matrix\n",
     "    ax5.set_xlim(xlim); ax6.set_xlim(xlim); ax7.set_xlim(xlim); ax3.set_xlim(xlim); ax4.set_xlim(xlim); \n",
     "# range: Y-axis\n",
     "ylim=[10**p_min, 10**p_max]; ax1.set_ylim(ylim)\n",
-    "if data.complex[0] > 0:    # Matrix\n",
+    "if comp_mode > 0:    # Matrix\n",
     "    ylim=[-0.05, 1.05]; ax5.set_ylim(ylim);  ax4.set_ylim(ylim); \n",
     "    ylim=[-1.05, 1.05]; ax6.set_ylim(ylim)\n",
     "    ylim=[-0.05, 185.]; ax7.set_ylim(ylim)\n",
@@ -991,7 +1047,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if data.complex[0] > 0:    # Matrix\n",
+    "if comp_mode > 0:    # Matrix\n",
     "    # Y-range\n",
     "    f_min0 = f_min;      f_max0 = f_max\n",
     "    if f_mode == 0:\n",
